--- a/package.json
+++ b/package.json
@@ -8,19 +8,29 @@
 		"@testing-library/react": "^13.0.0",
 		"@testing-library/user-event": "^13.2.1",
 		"axios": "^1.4.0",
+		"babel-preset-es2015": "^6.24.1",
 		"date-fns": "^2.30.0",
+		"env-cmd": "^10.1.0",
+		"eslint-config-prettier": "^9.0.0",
+		"handlebars": "^4.7.8",
+		"normalize.css": "^8.0.1",
 		"react": "^18.2.0",
+		"react-app-rewired": "^2.2.1",
+		"react-cookie": "^5.0.0",
+		"react-custom-events": "^1.1.1",
 		"react-dom": "^18.2.0",
 		"react-redux": "^8.1.2",
-		"react-scripts": "5.0.1",
-		"sass": "^1.64.2",
+		"react-scripts": "^5.0.1",
+		"react-toastify": "^9.1.3",
 		"web-vitals": "^2.1.0"
 	},
 	"scripts": {
-		"start": "react-scripts start",
-		"build": "react-scripts build",
-		"test": "react-scripts test",
-		"eject": "react-scripts eject"
+		"start": "env-cmd -f .env.development react-app-rewired start",
+		"build": "env-cmd -f .env react-app-rewired build",
+		"test": "craco test",
+		"eject": "react-scripts eject",
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -d build"
 	},
 	"eslintConfig": {
 		"extends": [
@@ -41,6 +51,23 @@
 		]
 	},
 	"devDependencies": {
-		"gh-pages": "^5.0.0"
+		"@babel/core": "^7.22.10",
+		"@babel/plugin-proposal-class-properties": "^7.18.6",
+		"@babel/plugin-syntax-dynamic-import": "^7.8.3",
+		"@babel/preset-env": "^7.22.10",
+		"@babel/preset-react": "^7.22.5",
+		"@craco/craco": "^7.1.0",
+		"babel-loader": "^9.1.3",
+		"css-loader": "^6.8.1",
+		"gh-pages": "^5.0.0",
+		"html-webpack-plugin": "^5.5.3",
+		"mini-css-extract-plugin": "^2.7.6",
+		"raw-loader": "^4.0.2",
+		"sass": "^1.65.1",
+		"sass-loader": "^13.3.2",
+		"style-loader": "^3.3.3",
+		"webpack": "^5.88.2",
+		"webpack-cli": "^5.1.4",
+		"webpack-dev-server": "^4.15.1"
 	}
 }
